--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -4,6 +4,7 @@
 @import "base/_fonts.css";
 
 @import "components/_card.css";
+@import "components/_menu.css";
 @import "components/_nav.css";
 @import "components/_section.css";
 
