--- a/app/assets/styles/components/_nav.css
+++ b/app/assets/styles/components/_nav.css
@@ -3,13 +3,11 @@
 
     &--row {
         display: flex;
+        align-items: center;
     }
 
-    &--header {
-        background-color: $white;
-        box-shadow: $shadow-default;
-        border-bottom-left-radius: .5rem;
-        border-bottom-right-radius: .5rem;
+    &--center {
+        justify-content: center;
     }
 
     &__item {
@@ -24,14 +22,15 @@
         &--brand {
             text-align: center;
             font-weight: 600;
-            background-color: #f3edfb;
-            background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='20' height='12' viewBox='0 0 20 12'%3E%3Cg fill-rule='evenodd'%3E%3Cg id='charlie-brown' fill='%23a49fac' fill-opacity='0.4'%3E%3Cpath d='M9.8 12L0 2.2V.8l10 10 10-10v1.4L10.2 12h-.4zm-4 0L0 6.2V4.8L7.2 12H5.8zm8.4 0L20 6.2V4.8L12.8 12h1.4zM9.8 0l.2.2.2-.2h-.4zm-4 0L10 4.2 14.2 0h-1.4L10 2.8 7.2 0H5.8z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
-            height: 2.5rem;
-            line-height: 2.5rem;
+            height: 3rem;
+            line-height: 3rem;
             width: 8rem;
+            background-color: $color-third;
+            border-radius: 3rem;
 
             &:hover, &:active {
-                background-color: $color-third;
+                background-color: $color-primary;
+                color: $white;
             }
         }
     }
