--- a/app/assets/styles/layouts/_header.css
+++ b/app/assets/styles/layouts/_header.css
@@ -3,15 +3,15 @@
     width: 100%;
     top: 0;
     right: 0;
-    padding: .75rem 2rem;
-    background-color: $color-primary;
+    z-index: 10;
+    padding: 1rem 2rem;
+    background-color: $white-opacity-50;
     display: flex;
     justify-content: space-between;
     box-shadow: $shadow-default;
-    border-bottom: .5rem solid $white;
 
     &__logo {
-        color: $white;
+        color: $color-primary;
 
         &-icon {
             height: 2.5rem;
@@ -29,14 +29,14 @@
             line-height: 2.5rem;
             border-radius: 1rem;
             padding: 0 2.5rem 0 1rem;
-            border: 1px solid $gray-200;
+            border: 1px solid $color-primary;
 
             &:focus {
                 border: 1px solid $white;
             }
 
             &::placeholder {
-                color: $gray-200;
+                color: $color-primary;
             }
         }
 
@@ -48,20 +48,12 @@
             position: absolute;
             top: 0;
             right: 0;
-            color: $white;
+            color: $color-primary;
 
             &-icon {
                 width: 1rem;
                 height: 1rem;
             }
         }
-    }
-
-    &__nav {
-        position: fixed;
-        z-index: 10;
-        top: 4.5rem;
-        right: 0;
-        padding: 0 2rem .5rem;
     }
 }
