--- a/app/assets/styles/layouts/_main.css
+++ b/app/assets/styles/layouts/_main.css
@@ -1,3 +1,6 @@
 .main {
-    margin: 9.5rem 5rem 3rem;
+    text-align: center;
+    width: 100%;
+    height: 100vh;
+    padding: 7rem 5rem 2rem;
 }
