--- a/app/assets/styles/layouts/_row.css
+++ b/app/assets/styles/layouts/_row.css
@@ -5,6 +5,12 @@
     display: flex;
     flex-wrap: wrap;
 
+    .col-4 {
+        padding-right: 1.5rem;
+        padding-top: 1.5rem;
+        width: 33.333333%;
+    }
+
     .col-6 {
         padding-right: 1.5rem;
         padding-top: 1.5rem;
