--- a/app/assets/styles/base/_base.css
+++ b/app/assets/styles/base/_base.css
@@ -5,7 +5,12 @@
 }
 
 html {
-    font-size: 15px;
+    font-size: 14px;
+    overflow-x: hidden;
+
+    @media (min-width: 768px) {
+        font-size: 15px;
+    }
 }
 
 body {
@@ -13,8 +18,21 @@ body {
     font-family: 'Work Sans', sans-serif;
     color: $color-default;
     line-height: 1.7;
-    background-color: $gray-200;
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='20' height='12' viewBox='0 0 20 12'%3E%3Cg fill-rule='evenodd'%3E%3Cg id='charlie-brown' fill='%23a49fac' fill-opacity='0.4'%3E%3Cpath d='M9.8 12L0 2.2V.8l10 10 10-10v1.4L10.2 12h-.4zm-4 0L0 6.2V4.8L7.2 12H5.8zm8.4 0L20 6.2V4.8L12.8 12h1.4zM9.8 0l.2.2.2-.2h-.4zm-4 0L10 4.2 14.2 0h-1.4L10 2.8 7.2 0H5.8z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+    overflow-x: hidden;
+    /*/ background-color: $gray-200;
+    // background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='20' height='12' viewBox='0 0 20 12'%3E%3Cg fill-rule='evenodd'%3E%3Cg id='charlie-brown' fill='%23a49fac' fill-opacity='0.4'%3E%3Cpath d='M9.8 12L0 2.2V.8l10 10 10-10v1.4L10.2 12h-.4zm-4 0L0 6.2V4.8L7.2 12H5.8zm8.4 0L20 6.2V4.8L12.8 12h1.4zM9.8 0l.2.2.2-.2h-.4zm-4 0L10 4.2 14.2 0h-1.4L10 2.8 7.2 0H5.8z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");*/
+}
+
+h1 {
+    font-size: 1.4rem;
+}
+
+h2 {
+    font-size: 1.3rem;
+}
+
+h3 {
+    font-size: 1.2rem;
 }
 
 button, input {
@@ -39,6 +57,11 @@ input, textarea {
 
 a {
     text-decoration: none;
+}
+
+img {
+    vertical-align: middle;
+    display: inline-block;
 }
 
 svg {
