--- a/app/assets/styles/components/_card.css
+++ b/app/assets/styles/components/_card.css
@@ -1,9 +1,21 @@
 .card {
 
+    &--shadow-drop {
+        filter: drop-shadow($drop-shadow-default);
+    }
+
     &__header {
         position: relative;
         width: 100%;
         height: 5rem;
+        color: $white;
+
+        &--like-fb {
+            padding: 0 1rem;
+            display: flex;
+            align-items: center;
+            color: $color-default;
+        }
 
         &-svg {
             width: 100%;
@@ -32,18 +44,64 @@
     &__body {
         width: 100%;
         background-color: $white;
-        /*color: $white;*/
         border-radius: .5rem;
         box-shadow: $shadow-default;
-        transition: all .5s;
+        border: 4px solid $white;
 
-        &:hover {
-            transform: translateY(-1rem);
+        &--bear-hidden {
+            transition: all .5s;
+
+            &:hover {
+                transform: translateY(-1rem);
+            }
+        }
+
+    }
+
+    &__content {
+        padding: .5rem;
+        text-align: left;
+
+        @media (min-width: 768px) {
+            padding: 1rem;
+        }
+
+        &--center {
+            text-align: center;
         }
     }
 
     &__text {
         width: 100%;
-        padding: 1rem;
+    }
+
+    &__avatar {
+        width: 3rem;
+        height: 3rem;
+        line-height: 3rem;
+        text-align: center;
+        border-radius: 50%;
+        background-color: $color-primary;
+        color: $white;
+        margin-right: .5rem;
+
+        &-icon {
+            width: 1.75rem;
+            height: 1.75rem;
+        }
+    }
+
+    &__image {
+        width: 100%;
+        margin-top: .5rem;
+    }
+
+    &__img {
+        width: 100%;
+        max-height: 14rem;
+
+        @media (min-width: 768px) {
+            max-height: 20rem;
+        }
     }
 }
