--- a/app/assets/styles/components/_section.css
+++ b/app/assets/styles/components/_section.css
@@ -1,21 +1,32 @@
 .section {
     width: 100%;
-    background-color: $white-opacity-50;
-    border-radius: .5rem;
-    box-shadow: $shadow-default;
     padding: 1.5rem 0;
+    margin-bottom: 6rem;
 
     &-one {
-        text-align: center; 
-        margin: 3rem 0;       
+        text-align: center;   
+    }
+
+    &-middle {
+        padding: 2rem 0;
+    }
+
+    &-last {
+        width: 100%;
+        padding: 1rem 0;
     }
 
     &__title {
         text-transform: uppercase;
-        font-size: 2rem;
+        
+        @media (min-width: 768px) {
+            font-size: 1.5rem;
+        }
     }
 
     &__body {
-        margin: 1rem 5rem;
+        @media (min-width: 992px) {
+            margin: 1rem 5rem;   
+        }
     }
 }
