--- a/app/assets/styles/layouts/_header.css
+++ b/app/assets/styles/layouts/_header.css
@@ -4,11 +4,15 @@
     top: 0;
     right: 0;
     z-index: 10;
-    padding: 1rem 2rem;
-    background-color: $white-opacity-50;
+    background-color: $white;
     display: flex;
     justify-content: space-between;
     box-shadow: $shadow-default;
+    padding: 1rem;
+
+    @media (min-width: 576px) {
+        padding: 1rem 2rem;
+    }
 
     &__logo {
         color: $color-primary;
@@ -20,19 +24,23 @@
     }
 
     &__search {
-        min-width: 20rem;
+        width: 70%;
         position: relative;
+
+        @media (min-width: 576px) {
+            width: 20rem;
+        }
 
         &-input {
             width: 100%;
-            height: 2.5rem;
-            line-height: 2.5rem;
+            height: 3rem;
+            line-height: 3rem;
             border-radius: 1rem;
-            padding: 0 2.5rem 0 1rem;
+            padding: 0 3rem 0 1rem;
             border: 1px solid $color-primary;
 
             &:focus {
-                border: 1px solid $white;
+                border: 1px solid $color-primary;
             }
 
             &::placeholder {
@@ -41,10 +49,10 @@
         }
 
         &-button {
-            height: 2.5rem;
-            width: 2.5rem;
+            height: 3rem;
+            width: 3rem;
             text-align: center;
-            line-height: 2.5rem;
+            line-height: 3rem;
             position: absolute;
             top: 0;
             right: 0;
