--- a/app/assets/styles/layouts/_main.css
+++ b/app/assets/styles/layouts/_main.css
@@ -2,5 +2,13 @@
     text-align: center;
     width: 100%;
     height: 100vh;
-    padding: 7rem 5rem 2rem;
+    padding: 6rem 1rem 2rem;
+    
+    @media (min-width: 576px) {
+        padding: 6rem 5rem 2rem;
+    }
+
+    @media (min-width: 768px) {
+        padding: 6rem 1rem 2rem;
+    }
 }
