--- a/app/assets/styles/layouts/_row.css
+++ b/app/assets/styles/layouts/_row.css
@@ -1,19 +1,33 @@
 .row {
     width: 100%;
-    margin-right: -1.5rem;
-    margin-left: -1.5rem;
     display: flex;
     flex-wrap: wrap;
 
-    .col-4 {
-        padding-right: 1.5rem;
-        padding-top: 1.5rem;
-        width: 33.333333%;
+    .col-12 {
+        width: 100%;
+        padding-right: .75rem;
+        padding-left: .75rem;
+        padding-top: .75rem;
+        padding-bottom: .75rem;
     }
 
-    .col-6 {
-        padding-right: 1.5rem;
-        padding-top: 1.5rem;
-        width: 50%;
+    .col-md-4 {
+        @media (min-width: 768px) {
+            padding-right: .75rem;
+            padding-left: .75rem;
+            padding-top: .75rem;
+            padding-bottom: .75rem;
+            width: 33.333333%;
+        }
+    }
+
+    .col-md-6 {
+        @media (min-width: 768px) {
+            padding-right: .75rem;
+            padding-left: .75rem;
+            padding-top: 1.5rem;
+            padding-bottom: .75rem;
+            width: 50%;
+        }
     }
 }
