--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -1,3 +1,4 @@
+@import "abstracts/_animations.css";
 @import "abstracts/_variable.css";
 
 @import "base/_base.css";
@@ -7,9 +8,11 @@
 @import "components/_contact.css";
 @import "components/_menu.css";
 @import "components/_nav.css";
+@import "components/_scroll-to-top.css";
 @import "components/_section.css";
 
 @import "layouts/_footer.css";
+@import "layouts/_grid.css";
 @import "layouts/_header.css";
 @import "layouts/_main.css";
 @import "layouts/_row.css";
