--- a/app/assets/styles/abstracts/_animations.css
+++ b/app/assets/styles/abstracts/_animations.css
@@ -9,3 +9,15 @@
         transform: translateY(0rem);
     }
 }
+
+@keyframes reveal {
+    0% {
+        transform: scale(0);
+        opacity: 0;
+    }
+    100% {
+        display: block;
+        opacity: 1;
+        transform: scale(1);
+    }
+}
