--- a/app/assets/styles/components/_card.css
+++ b/app/assets/styles/components/_card.css
@@ -1,5 +1,17 @@
 .card {
 
+    &--reveal {
+        opacity: 0;
+
+        &-visible {
+            opacity: 1;
+            visibility: visible;
+            animation-name: reveal;
+            animation-duration: .3s;
+            animation-iteration-count: .3s;
+        }
+    }
+
     &--shadow-drop {
         filter: drop-shadow($drop-shadow-default);
     }
